ros_workspace/log/build_2020-12-02_06-21-58/ralph_py/stderr.log
  File "/home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py/ralph.py", line 48
    for i in range(len(current)+len(self.reference_scanline))
                                                            ^
SyntaxError: invalid syntax

